--- a/src/app.css
+++ b/src/app.css
@@ -43,7 +43,7 @@ body {
 	place-items: center;
 	min-width: 320px;
 	/* min-height: 100vh; */
-	height: 100vh;
+	height: 100dvh;
 	width: 100%;
 	background: var(--color-foreground);
 	overflow: hidden;
